@@ -1,1 +1,36 @@
 # SEProject_BinManager
+
+Context :
+--------
+
+Name project : BinManager
+Authors : Alexander-Lee COUCHY, Felix POTIE, Mathilde RUTH, Camille THOMAS
+
+We created this project as part of our course Software Engineering for Computer Science and Management at Polytech Montpellier.
+
+
+How to install :
+---------------
+
+Clone the git repository on your computer : https://github.com/alexanderleecii/SEProject_BinManager
+Download the JavaFX version which suits with your exploitation system : https://docs.oracle.com/javafx/2/installation/jfxpub-installation.htm
+
+In Elipse :
+
+Go on SEProject_BinManager/BinManager/src/BinManagerUI/
+clic right on LoginUI.java 
+clic on run as > run configuration
+In Java application > LoginUI
+In Arguments tab
+In VM Arguments write :
+For Ubuntu systems 
+> --module-path <PATH>/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml
+
+For Windows systems 
+> --module-path "<PATH>\openjfx-11.0.2_windows-x64_bin-sdk\javafx-sdk-11.0.2\lib" --add-modules=javafx.controls,javafx.fxml
+
+
+How to run :
+-----------
+
+run LoginUI file
